Bug 882909 - [FTU] Don't overlap progress bar with WiFi hotspot entries. r=fcampo

--- a/apps/communications/ftu/css/style.css
+++ b/apps/communications/ftu/css/style.css
@@ -301,6 +301,10 @@ a {
  * Wifi
  */
 
+#wifi {
+  top: 1.5rem;
+}
+
 #wifi [data-type="list"] li > p {
   pointer-events: none;
 }
@@ -334,7 +338,7 @@ a {
 */
 
 #wifi-wrapper {
-  top: 0;
+  top: -1rem;
   bottom: 5.5rem;
 }
 
